# BordBot

./: LICENSE  README.md  main.py  pyproject.toml  server.py
static/: mensagem.html
